@@ -21,6 +21,8 @@ Core and builtins
   in the byte code and co_consts even if they were not used, ie
   immediately popped off the stack.
 
+- Fixed a reference-counting problem in property().
+
 
 Library
 -------
